Sun Apr 06 19:40:12 GMT 2014  James Aylett <james@tartarus.org>

       * perl/Makefile.am: Perl tests are ordering-dependent, so
         use .NOTPARALLEL to avoid problems during parallel builds.

Sun Mar 30 22:57:50 GMT 2014  Anish Kanchan <anishgkanchan@gmail.com>

	* java/SmokeTest.java: Add testcase that FLAG_SPELLING is now wrapped
	  in a usable way.  (see #616)

Sun Mar 30 22:06:54 GMT 2014  Olly Betts <olly@survex.com>

	* lua/docs/index.rst: Note that constants can now be accessed using
	  CLASS.CONSTANT as well as CLASS_CONSTANT.

Sun Mar 30 22:04:43 GMT 2014  Olly Betts <olly@survex.com>

	* lua/docs/index.rst: RST source formatting tweak.

Thu Mar 27 23:02:39 GMT 2014  Olly Betts <olly@survex.com>

	* lua/smoketest.lua: Whitespace tweak.

Thu Mar 27 23:00:56 GMT 2014  Olly Betts <olly@survex.com>

	* lua/smoketest.lua: Change expect() parameter order to the more
	  natural (got, expected), which most of the calls already used,
	  and fix up the few calls which passed (expected, got).

Thu Mar 27 10:45:27 GMT 2014  Olly Betts <olly@survex.com>

	* python/Makefile.am,python3/Makefile.am: Pass
	  -DSWIG_PYTHON_LEGACY_BOOL to SWIG to revert strict bool typemap to
	  the more Pythonic older typemap.

Thu Mar 27 07:21:08 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Don't report Python version twice if it's too new or
	  too old.

Mon Mar 10 11:17:12 GMT 2014  Olly Betts <olly@survex.com>

	* README: Add links to Erlang and Node.js bindings.

Mon Mar 10 02:35:19 GMT 2014  Olly Betts <olly@survex.com>

	* csharp/docs/index.rst,lua/docs/index.rst,php/docs/index.rst,
	  python/docs/index.rst,ruby/docs/index.rst,tcl8/docs/index.rst:
	  Remove use of "$Date" as it's not expanded by git, and the "last
	  updated" information isn't all that informative anyway - there can
	  still be stale information even if the file was updated very
	  recently.

Mon Mar 10 02:27:52 GMT 2014  Olly Betts <olly@survex.com>
